[package]
name = "tiktok-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
tokio = {"version" = "1.14.0", features=["rt-multi-thread", "macros"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"