[package]
name = "tiktonick-bot"
version = "0.3.0"
edition = "2021"

[features]
default = ["twitter", "tiktok"]
instagram = []
twitter = []
tiktok = []

[dependencies]
reqwest = "0.11.7"
serde_json = "1.0"
futures = "0.3"

# Telegram bot
teloxide = { version = "0.8.0", features = ["macros", "auto-send", "throttle"] }
mongodb = { version = "2.0.2", features = ["tokio-runtime"] }
async-trait = "0.1.52"

# General
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18.4", features=["rt-multi-thread", "macros", "time"]}
anyhow = "1.0"
regex = "1"
lazy_static="1"